fix: ignore revive counter and purchase revive cooldown dye items in Kuudra fix: prevent pickup log spam on fly state change in Kuudra by correctly gating state update